# vjoyqt

./: .gitignore  CMakeLists.txt  COPYING  README.md  main.cpp  v_joy_qt_gui.cpp  v_joy_qt_gui.h  v_joy_qt_gui.ui  v_joystick_adapter.cpp  v_joystick_adapter.h
ui/: CMakeLists.txt  main.cpp  v_joystick_about_dialog.cpp  v_joystick_about_dialog.h  v_joystick_about_dialog.ui  v_joystick_main_window.cpp  v_joystick_main_window.h  v_joystick_main_window.ui
ui/resources/: about.xcf
vjoyqt/: CMakeLists.txt  v_joystick_adapter.cpp  v_joystick_adapter.h
