# --------------------------------------------
# cmake file for vJoyQt project
# author: Evgeny Proydakov lord.tiran@gmail.com
# --------------------------------------------
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

PROJECT(vJoyQt)
MESSAGE(STATUS "CREATE V_JOY_QT")

# temp setting
SET(CMAKE_BUILD_TYPE Debug)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)

# add the include folder to the include path
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})

# find Qt components
FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui REQUIRED)
INCLUDE(${QT_USE_FILE})

# find SDL library
FIND_PACKAGE(SDL)
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})

SET(LIB_HEADER_FILES
	v_joystick_adapter.h)

SET(LIB_SOURCE_FILES
	v_joystick_adapter.cpp)

QT4_WRAP_CPP(MOC_SOURCES ${LIB_HEADER_FILES})

ADD_LIBRARY(vJoyQt SHARED ${LIB_HEADER_FILES} ${LIB_SOURCE_FILES} ${MOC_SOURCES})
TARGET_LINK_LIBRARIES(vJoyQt ${QT_LIBRARIES})
TARGET_LINK_LIBRARIES(vJoyQt ${SDL_LIBRARY})

SET(GUI_HEADERS_FILES
        v_joy_qt_gui.h)

SET(GUI_SOURCE_FILES
        main.cpp
        v_joy_qt_gui.cpp)

SET(QT_FORMS v_joy_qt_gui.ui)

QT4_WRAP_CPP(GUI_MOC_SOURCES ${GUI_HEADERS_FILES})
QT4_WRAP_UI(QT_FORMS_HEADERS ${QT_FORMS})

ADD_EXECUTABLE(v_joystick_gui ${GUI_HEADER_FILES} ${GUI_SOURCE_FILES} ${LIB_HEADER_FILES} ${GUI_MOC_SOURCES} ${QT_FORMS_HEADERS})
ADD_DEPENDENCIES(v_joystick_gui vJoyQt)
TARGET_LINK_LIBRARIES(v_joystick_gui vJoyQt)
TARGET_LINK_LIBRARIES(v_joystick_gui ${SDL_LIBRARY})
TARGET_LINK_LIBRARIES(v_joystick_gui ${QT_LIBRARIES})
