# --------------------------------------------
# cmake file for vJoyQt project
# author: Evgeny Proydakov lord.tiran@gmail.com
# --------------------------------------------
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

PROJECT(VJOYQT)
MESSAGE(STATUS "CREATE V_JOY_QT")

# temp setting
IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF(NOT CMAKE_BUILD_TYPE)

# build libraries type
IF(NOT DEFINED BUILD_SHARED_LIBS)
    SET(BUILD_SHARED_LIBS ON)
ENDIF(NOT DEFINED BUILD_SHARED_LIBS)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)

# add the include folder to the include path
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})

# find Qt components
FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui REQUIRED)
INCLUDE(${QT_USE_FILE})

# find SDL library
FIND_PACKAGE(SDL)
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})

SET(LIB_HEADER_FILES
    v_joystick_adapter.h)

SET(LIB_SOURCE_FILES
    v_joystick_adapter.cpp)

QT4_WRAP_CPP(MOC_SOURCES ${LIB_HEADER_FILES})

ADD_LIBRARY(vjoyqt ${LIB_HEADER_FILES} ${LIB_SOURCE_FILES} ${MOC_SOURCES})
TARGET_LINK_LIBRARIES(vjoyqt ${QT_LIBRARIES})
TARGET_LINK_LIBRARIES(vjoyqt ${SDL_LIBRARY})

ADD_SUBDIRECTORY(ui)
